# advent-of-code-2020

./: .gitignore  README.md
day1/: Cargo.toml  day1.ml  dune  merlin-init.sh  ping.ml  pong.ml
day1/lib/: dune  ping_pong.ml  ping_pong.mli  ping_pong.obus  ping_pong.xml
day1/src/: main.rs
day10/: cheat.py
day11/: Cargo.toml
day11/src/: arrays.rs  main.rs  print.rs  strings.rs  vars.rs  vectors.rs
day12/: a.py  b.py
day2/: Cargo.toml  cheat.py
day2/src/: main.rs
day3/: Cargo.toml  cheat.py  fake.input
day4/: cheat.py
day5/: cheat.py
day6/: day6.input.copy
day7/: cheat.py
day9/: cheat.py  test2.input
